fix(mobile): makes app work better on mobile devices

--- a/app/assets/stylesheets/components/_quiz-result.less
+++ b/app/assets/stylesheets/components/_quiz-result.less
@@ -16,9 +16,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    height: 50%;
-    padding: @spacing-l;
+    width: 200px;
+    height: 200px;
     border-radius: 100%;
     border: 3px solid saturate(@gradient-end, 35%);
   }
