--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -13,5 +13,5 @@
   position: relative;
 }
 
-//.blah {
-//}
+.blah {
+}
